Fix title overlap.
Title was overlapping on mobile devices.  Swapped to centering using row/col and a card so that the whole block will be colored.  Resolves #1

--- a/css/master.css
+++ b/css/master.css
@@ -9,6 +9,16 @@ body, html {
 }
 
 /* Content Sections */
+.black-card {
+  background-color: black;
+}
+
+.main-card {
+  letter-spacing: 10px;
+  font-size: 25px;
+  padding-top: 10px;
+}
+
 .section-header {
   text-align: center;
 }
